--- a/students/k3340/laboratory_works/Aleksey Ignatev/laboratory_work_2/lab/my_hotel/hotels/templates/hotel_list.html
+++ b/students/k3340/laboratory_works/Aleksey Ignatev/laboratory_work_2/lab/my_hotel/hotels/templates/hotel_list.html
@@ -10,7 +10,7 @@
     <h1>Hotels</h1>
     <ul>
         {% for hotel in hotels %}
-            <li><a href="{% url 'room_reserve' hotel.id %}">{{ hotel.name }}  /</a> <a href="{% url 'write_review' hotel.id %}">Оставить отзыв</a></li>
+            <li><a href="{% url 'room_reserve' %}">{{ hotel.name }}  /</a> <a href="{% url 'write_review' hotel.id %}">Оставить отзыв</a></li>
         {% endfor %}
     </ul>
 </body>
